--- a/login.html
+++ b/login.html
@@ -1,102 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration Page</title>
-    <style>
-        body {
-            background-image: url('img.jpg');
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-
-        .container {
-            max-width: 400px;
-            margin: 100px auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            text-align: center;
-        }
-
-        h2 {
-            text-align: center;
-        }
-
-        .btn-container {
-            text-align: center;
-        }
-
-        .btn {
-            padding: 10px 20px;
-            margin: 10px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .btn-primary {
-            background-color: #007bff;
-            color: #fff;
-        }
-
-        .btn-secondary {
-            background-color: #6c757d;
-            color: #fff;
-        }
-    </style>
+    <title>Medical Website Login</title>
+    
+    <link rel="stylesheet" href="project.css">
 </head>
 
 <body>
-    
     <div class="container">
-        <h1>WELCOME</h1>
-        <h2> Blood Management System</h2>
-        <div class="btn-container">
-            <button class="btn btn-primary" onclick="showSignIn()">Sign In</button>
-            <button class="btn btn-secondary" onclick="showSignUp()">Sign Up</button>
-        </div>
-        <div id="sign-in" style="display: none;">
-            <h3>Sign In</h3>
-            <form action="signin.php" method="post">
-                <input type="text" name="username" placeholder="Username" required><br><br>
-                <input type="password" name="password" placeholder="Password" required><br><br>
-                <button type="submit" class="btn btn-primary">Sign In</button>
-            </form>
-        </div>
-        <div id="sign-up" style="display: none;">
-            <h3>Sign Up</h3>
-            <form action="signup.php" method="post">
-                <input type="text" name="username" placeholder="Username" required><br><br>
-                <input type="email" name="email" placeholder="Email" required><br><br>
-                <input type="password" name="password" placeholder="Password" required><br><br>
-                <button type="submit" class="btn btn-primary">Sign Up</button>
-            </form>
+        <form action="#" method="post" class="login-form">
+            <h1>WELCOME</h1>
+            <h2>Sign In</h2>
+            <input type="text" name="username" placeholder="Username or Email" required>
+            <input type="password" name="password" placeholder="Password" required>
+            <button type="submit">Sign In</button>
+            <div class="separator">or</div>
+            <button type="button" class="google-login">Sign In with Google</button>
+        </form>
+        <div class="signup-container">
+            <p>Don't have an account?</p>
+            <a href="#" class="signup-link">Sign Up</a>
         </div>
     </div>
-
-    <script>
-        function showSignIn() {
-            document.getElementById('sign-in').style.display = 'block';
-            document.getElementById('sign-up').style.display = 'none';
-        }
-
-        function showSignUp() {
-            document.getElementById('sign-in').style.display = 'none';
-            document.getElementById('sign-up').style.display = 'block';
-        }
-    </script>
 </body>
-
 </html>
