--- a/index.html
+++ b/index.html
@@ -1,13 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blood Donation Management System</title>
-  <link rel="stylesheet" href="project.css">
-  <link rel="stylesheet" href="project.js" type="text/Javascript">
-  
+  <a href="login.html"><span>Login</span></a>
+  <script src="project.js"></script>
+
 </head>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+
+  header {
+    background-color: #dc3545;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+  }
+
+  nav {
+    background-color: #343a40;
+    color: #fff;
+    padding: 10px;
+  }
+
+  nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  nav ul li {
+    display: inline;
+    margin-right: 10px;
+  }
+
+  nav ul li a {
+    text-decoration: none;
+    color: #fff;
+  }
+
+  main {
+    padding: 20px;
+  }
+
+  section {
+    margin-bottom: 20px;
+  }
+
+  form label {
+    display: block;
+    margin-bottom: 5px;
+  }
+
+  form input,
+  form select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+
+  form button {
+    padding: 10px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+  }
+
+  footer {
+    background-color: #343a40;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+  }
+</style>
+
 <body>
   <header>
     <h1>Blood Donation Management System</h1>
@@ -70,4 +143,5 @@
   </footer>
   <script src="script.js"></script>
 </body>
+
 </html>
