--- a/login.html
+++ b/login.html
@@ -7,7 +7,25 @@
     
     <link rel="stylesheet" href="project.css">
 </head>
-
+<style>
+    body {
+    background-image: url('img1.jpg');
+    background-size: cover;
+    /* This ensures the image covers the entire background */
+    background-position: 0ch;
+    /* This centers the background image */
+    font-family: Arial, sans-serif;
+    /* Just for font consistency */
+    margin: 0;
+    /* Removes default margin */
+    padding: 0;
+    /* Removes default padding */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+   }
+</style>
 <body>
     <div class="container">
         <form action="#" method="post" class="login-form">
