--- a/signup.html
+++ b/signup.html
@@ -95,8 +95,16 @@
     }
   }
 
-  /* body {
-    background-image: url('image.jpg');
+  .container {
+
+background-color: rgba(255, 255, 255, 0.5);
+/* Adjust the alpha value (0.5 in this case) to control transparency */
+padding: 20px;
+border-radius: 10px ;
+
+}
+body {
+    background-image: url('img1.jpg');
     background-size: cover;
     /* This ensures the image covers the entire background */
     background-position: 0ch;
@@ -111,7 +119,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-  } */
+   }
 </style>
 
 <body>
